...
        self.setupView()
        self.setupConstraints()
        self.addLoading()
    }
    
    private func setupNavidation() {
        navigationController?.navigationBar.accessibilityIdentifier = "DetailsNavigationBar"
        navigationItem.backBarButtonItem?.accessibilityIdentifier = "DetailsButtonBack"
        title = NSLocalizedString("titleDetails", comment: "")
        self.navigationController?.navigationBar.prefersLargeTitles = false
    }
    
    private func getData(from url: URL, completion: @escaping (Data?, URLResponse?, Error?) -> ()) {
...
                    self.component.backgroundUserProfile.image = UIImage(data: data) ?? UIImage()
                    self.component.userView.image = UIImage(data: data) ?? UIImage()
                }
            }
        }
        
        component.buttonSeeMore.accessibilityIdentifier = "ButtonSeeMore"
        
        component.backgroundUserProfile.frame = (view.bounds)
        component.blurBackground.frame = (view.bounds)
        
        component.userNameLabel.text = viewModel.character?.name
        
...
