...
        definesPresentationContext = true
    }
    
    private func setupNavidation() {
        navigationItem.title = NSLocalizedString("titleFavorite", comment: "")
        self.navigationController?.navigationBar.prefersLargeTitles = true
        self.navigationController?.navigationBar.accessibilityIdentifier = "NavigationBarFavorites"
        navigationItem.largeTitleDisplayMode = .automatic
        UINavigationBar.appearance().largeTitleTextAttributes =
            [NSAttributedString.Key.foregroundColor: UIColor.blue,
             NSAttributedString.Key.font:UIFont.boldSystemFont(ofSize: 22)]
        navigationItem.hidesSearchBarWhenScrolling = false
    }
...
